--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                 placeholder="Enter your full name"
                 autofocus>
             </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input 
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter your email"
+                required>
+            </div>
         </form>
     </section>
 </body>
